--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "@mui/material": "^5.8.5",
     "axios": "^0.27.2",
     "fuse.js": "^6.6.2",
+    "mongoose": "^6.4.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
