--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.8.5",
     "axios": "^0.27.2",
     "fuse.js": "^6.6.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.2",
     "next": "12.1.6",
     "react": "18.2.0",
