--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_ATLAS=mongodb+srv://baltiearaneta:mongoBaltie123@cluster0.c7tdl.mongodb.net/thesaurus?retryWrites=true&w=majority
+MONGODB_LOCAL=mongodb://127.0.0.1:27017/thesaurus
