--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.2",
