--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.4.2",
     "next": "12.1.6",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
