fixed weird search

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGODB_LOCAL=mongodb://127.0.0.1:27017/thesaurus
 GOOGLE_CLIENT_ID=963106110299-v4ueul5fa05anav4urto3cv2re00b8gp.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
-JWT_SECRET=testapp
+NEXTAUTH_SECRET= testapp
