--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "fuse.js": "^6.6.2",
