--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.4.2",
     "next": "^12.1.6",
     "next-auth": "^4.12.2",
+    "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
